test/error/error-runsnip.ss
!<
  1 + $[ ! $<2 * 3>; $<1> ]
>
# -> type error
